--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
  </div>
 
 <nav>
-  <h2>
+  <h2 class="mat-elevation-z8">
     <a routerLink="src/app/circular-area" routerLinkActive="active">Circular Area</a>/
     <a routerLink="src/app/circumference" routerLinkActive="active">Circumference</a>
   </h2>
