--- a/src/app/circular-area/circular-area.component.html
+++ b/src/app/circular-area/circular-area.component.html
@@ -1,4 +1,5 @@
-<p>
+
+  <h2 class="mat-elevation-z8">
   circular-area:
   <app-calc-component value=5 selCalc='circulararea'></app-calc-component>
-</p>
+  </h2>
