--- a/src/app/circumference/circumference.component.html
+++ b/src/app/circumference/circumference.component.html
@@ -1,5 +1,5 @@
-<p>
+<h2 class="mat-elevation-z8">
     circumference:
     <app-calc-component value=5 selCalc='circumference'></app-calc-component>
-</p>
+</h2>
   
