--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 
 <nav>
   <h2 class="mat-elevation-z8">
+      <a routerLink="src/app/eq-solver" routerLinkActive="active">EQ-Solver</a>/
     <a routerLink="src/app/circular-area" routerLinkActive="active">Circular Area</a>/
     <a routerLink="src/app/circumference" routerLinkActive="active">Circumference</a>
   </h2>
